--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,7 @@ logs/
 checkpoints/
 runs/
 wandb/
+.cursor/
 
 # Jupyter Notebook
 .ipynb_checkpoints
@@ -65,7 +66,6 @@ htmlcov/
 nosetests.xml
 coverage.xml
 *.cover
-example.py
 
 # Documentation
 docs/_build/
