--- a/lmm_project/requirements.txt
+++ b/lmm_project/requirements.txt
@@ -8,9 +8,11 @@ torch>=1.9.0
 transformers>=4.11.3
 
 # Natural Language Processing
-nltk>=3.6.3
+nltk>=3.8.1
 scikit-learn>=1.0.0
 gensim>=4.1.2
+transformers>=4.28.1
+spacy>=3.5.3
 
 # Vector storage
 faiss-cpu>=1.7.1; platform_system != "Windows"
@@ -29,6 +31,7 @@ requests>=2.26.0
 python-dotenv>=0.19.0
 soundfile>=0.10.3
 sounddevice>=0.4.3
+librosa>=0.9.2  # Audio feature extraction
 
 # Visualization
 matplotlib>=3.4.3
