--- a/lmm_project/config.yml
+++ b/lmm_project/config.yml
@@ -5,7 +5,7 @@
 # System settings
 system:
   version: "0.1.0"
-  log_level: "INFO"  # DEBUG, INFO, WARNING, ERROR, CRITICAL
+  log_level: "ERROR"  # DEBUG, INFO, WARNING, ERROR, CRITICAL
   storage_dir: "storage"
   cuda_enabled: true
   cuda_fallback: true  # Fall back to CPU if CUDA unavailable
