--- a/agendev/requirements.txt
+++ b/agendev/requirements.txt
@@ -1,6 +1,10 @@
 # Dependencies 
 requests 
-pydantic=2.0.0 
+pydantic 
 numpy 
 soundfile 
 sounddevice 
+dash 
+dash-bootstrap-components 
+plotly 
+pandas 
